# advancedRag

./: README.md  bm25.ipynb  bm25_values.json  hybridnaik.ipynb  hybridsearch.ipynb  main.ipynb  main.py  pyproject.toml  theory.txt
rag/: chunking.txt  embeddings.txt  loaders.txt  retrival.txt  vectore_store.txt
